--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,21 @@
             "username": "Students_Scores",
             "password": "root",
             "connectionTimeout": 30
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "ScoreBoard",
+            "database": "SmartTutorials",
+            "username": "root",
+            "connectionTimeout": 30,
+            "password": "root"
         }
     ]
 }
